refactor: publish protocol interface layer
